2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* COPYING: New file.
	* avrtest.c: Update GPL copyright years.
	* avr-insn.def: Update GPL copyright years.
	* gen-flag-tables.c: Update GPL copyright years.
	(main): Transfer GPL to flag-tables.c.
	* flag-tables.c: Regenerate.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	Implement a ticks counter for timing measurements.

	* avrtest.h (TICKS_PORT_ADDR, TICKS_PORT): New defines.
	* avrtest.c (flag_have_ticks, ticker_locked): New variables.
	(parse_args) [-no-ticks]: New option to unset flag_have_ticks.
	(usage): Document it.
	(do_step) [flag_have_ticks]: Update cpu_data[TICKS_PORT] to
	program_cycles.
	(data_read_byte_raw): Increment ticker_locked if reading from
	TICKS_PORT[0..2].

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (CFLAGS): Add -std=c99.
	(WARN): Add -pedantic.
	* avrtest.c: Use more C99.
	* gen-flag-tables.c: Same.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* .svnignore: New file.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (opcode_func_array, enum avr_op_index_): Factor out
	instruction table to, and include...
	* avr-insn.def: ...this new file.
	* Makefile (DEPS): Depend on avr-insn.def.

2014-09-12  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (%-xmega.exe): Fix command to build avrtest-xmega.exe.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	Support -e ADDRESS to set program entry point.

	* avrtest.c (parse_args) [cpu_PC]: Set according to...
	[-e ADDRESS]: ...this new command line option.
	(usage): Document it.
	(execute) [cpu_PC]: Don't set to 0.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (exit-xmega): Depend on exit-atxmega128a1.o.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	* gen-flag-tables.c (table_add): Print values as hex.
	* flag-tables.c: Regenerate.

2012-12-15  Georg-Johann Lay  <avr@gjlay.de>

	Don't build XMEGA stuff per default.

	* Makefile: Use .exe executable suffix if build OS is windows.